# Engineering

./: .gitignore  .gitmodules  BuildPlatformServices.sh  BuildSecureComputation.sh  CI-WindowsPlatformDeliverables.bat  Common.mk  CreateDailyBuild.sh  DeployPlatform.sh  Deprovision.sh  Dockerfile.development  Jenkinsfile  JenkinsfileNightly  Makefile  Manual-WindowsPlatformDeliverables.bat  PackagePlatformServices.sh  README.md  Step1_Deprovision.sh  deploy_config.sh  install.sh  release-notes.txt
.github/: CODEOWNERS  pull_request_template.md
ApiService/: docker-compose.yml  requirements.txt
ApiServices/: .gitignore  Readme.md  aggregator_scn_auth.md  dev_setup.sh  generators.sh  requirements.txt
AuditService/: cert.pem  client.pem  loki_local_config.yaml  package.sh  server.pem
CI_CD/: CI-WindowsPlatformDeliverables.bat  Dockerfile.ci
DatabaseInitializationTool/: Makefile
DatasetTool/: .gitignore  DatasetTool.csproj  build-linux.sh  build-win.ps1  flow.puml  test_csv.sh  test_fhir.sh
DeployPlatform/: Deploy.py  Dockerfile  Entrypoint.sh  Readme.md  entrypoint.sh  requirements.txt  sailazure.py
DevopsConsole/: .gitignore
Docker/: BuildImages.sh  DeprovisionService.sh  Readme.md  RunLocalFederation.sh  RunService.sh
Jenkins/: JenkinsfileFunctional  JenkinsfileNightly
Make/: Common.mk  Modules.mk  apiservices.mk  dataservices.mk  newwebfrontend.mk  platformservices.mk  securecomputationnode.mk  webfrontend.mk
Milestone2/: CreateDailyBuild.sh
Milestone3/: Common.mk  CreateDailyBuild.sh
Milestone5/: .gitignore  BuildImages.sh  BuildPlatformServices.sh  Common.mk  Readme.md  (+9 more)
database-initialization/: .gitignore  Makefile  README.md  pyproject.toml  sail_client-0.1.0-py3-none-any.whl  test.py
database-initialization/database_initialization/: __init__.py  data_model.py  initializer.py  main.py  organization.py
database-initialization/database_initialization/template/: data_model_pancan.json  db_init.json
project-template/{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
researcher-sdk/: README.md  pyproject.toml
researcher-sdk/docs/: index.md
researcher-sdk/tests/: test_foo.py
(+2401 files in other folders)
