[tool.poetry]
name = "database_initialization"
version = "0.1.0"
description = "Initialize the database with the provided configuration"
authors = ["Prawal Gangwar"]
readme = "README.md"
packages = [{include = "database_initialization"}]

[tool.poetry.dependencies]
python = "3.8.10"
black = "22.12.0"
flake8 = "4.0.0"
typer = {extras = ["all"], version = "0.7.0"}
pydantic = "^1.10.7"

[tool.poetry.scripts]
database-initialization = 'database_initialization.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
