[tool.poetry]
name = "{{cookiecutter-project-name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <f{{cookiecutter.email}}>"]
readme = "README.md"
packages = [{include = "{{cookiecutter"}]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "4.0.0"
black = "^22.12.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
